2006-05-25   Ping Cheng <pingc@wacom.com>
	* Fixed a typo in some wacom.c files
	* Update configure.in and acinclude.m4 (Ron at Debian) for
	   xorg 7 installation path
	   detecting target arch
	   configure xlib path 
	* Release as 0.7.4-2

2006-05-05   Ping Cheng <pingc@wacom.com>
	* Updated website
	* Ready to release 0.7.4

2006-05-03   Ping Cheng <pingc@wacom.com>
	* Removed kernels 2.6.2/3/4/5/6/7

2006-05-01   Ping Cheng <pingc@wacom.com>
	* Updated DTF-521 support
	* Updated PenPartner code in wacom.c (Nick Lamb)
	* Support X.Org 7 wacom driver paths
	* Removed SYSCALL for unnecessary statements (Andrew Zabolotny)

2006-04-06   Ping Cheng <pingc@wacom.com>
	* Ready to release 0.7.3-1

2006-03-31   Ping Cheng <pingc@wacom.com>
	* Support 2.6.16
	* Updated Mouse1 page to include kernel 2.6

2006-03-27   Ping Cheng <pingc@wacom.com>
	* Fixed serial id report issue in wacom.c (Rob Engle)
	* Fixed Xinput events being reported twice (Rob Engle)

2006-03-14   Ping Cheng <pingc@wacom.com>
	* Fixed a relative distance bug in wcmCommon.c
	* Ready to release 0.7.3 as beta

2006-03-06   Ping Cheng <pingc@wacom.com>
	* Fixed a Volito bug (Kirill Frolov)
	* Fixed a xsetwacom.c typo 
	* Supporting tablet attach/detach while X driver running (Christian Lupien) 
	* Remove SYSCALL from xf86 calls (Christian Lupien)
	* Swapped USB tablet wheel directions (Christian Lupien)

2006-02-27   Ping Cheng <pingc@wacom.com>
	* Updated website
	* Support 2.6.15
	* Fixed a Graphire 2 issue

2006-02-11   Ping Cheng <pingc@wacom.com>
	* Updated website
	* Added DTF 521, I3 12x12, and I3 12x19

2006-01-09   Ping Cheng <pingc@wacom.com>
	* Restructured the website
	* Added a page for Tablet PC 
	* Added a mini-HOWTO page for Fedora Core 4
	* Updated application developers' page

2005-12-21   Ping Cheng <pingc@wacom.com>
        * Updated website
	* Released 0.7.2